--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,159 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+
+/* Color palette variables */
+:root {
+    --black: #1a1a1d; 
+    --white: #f5f5f5; 
+    --aqua: #1ce0ca; 
+    --ultraviolet: #f5f; 
+}
+/* Generic class style start */
+*,
+*::before,
+*::after {
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box; 
+}
+
+body {
+    font-family: "Poppins", sans-serif; 
+    background-color: var(--black); 
+    color: var(--white); 
+}
+
+header {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center; 
+    padding: 0 2rem; 
+    font-size: 20px;
+    margin: 2rem 0 7rem 0; 
+}
+/* Generic class style end */
+
+/* Multi-use styles for buttons and section panels start */
+.panel {
+    display: flex;
+    align-items: center;  
+    flex-direction: column; 
+    flex-wrap: wrap;  
+    margin: 0 auto; 
+    width: 50%; 
+    text-align: center; 
+}
+
+.btn, .input {
+    font-size: 100%;
+    font-family: inherit;
+    padding: 0.25rem 0.4rem; 
+    background-color: var(--black);
+    color: var(--white);  
+    border-width: 3.5px; 
+    border-radius: 0.4rem; 
+    border-color: var(--aqua); 
+    margin-top: 0.5rem; 
+    outline: none; 
+    transition: border 150ms ease-in;
+}
+
+/* Style for button & input interaction */
+.btn:hover, .input:hover {
+    border-color:#f5f;
+    box-shadow:1px 1px 1px #f5f; 
+}
+
+.btn:focus, .input:focus {
+    border-color:#f5f;
+    box-shadow:1px 1px 1px #f5f; 
+}
+
+
+.input::placeholder {
+    color: var(--white); 
+}
+
+
+/* Multi-use styles for buttons and section panels end */
+
+
+
+
+/* Style specific elements via id tags*/
+#scoreboard {
+    font-size: 20px; 
+
+}
+/* Place hiscore title in the same spot as other panels, even when the header is hidden */
+#highscore-panel.panel {
+    margin-top: 174px; 
+}
+
+#timer-box {
+    font-weight: bold; 
+}
+
+/* Style for question panels */
 #question-panel {
-    color: blue; 
+    flex-direction: row; 
+    text-align: left; 
 }
 
-#welcome-panel {
-    color: green; 
+#question-title {
+    width: 100%; 
 }
 
-#score-submit-panel {
-    color: red; 
+/* Style for answer list items */
+#answer-list {
+    margin-left: 1rem; 
 }
+
+#answer-list li{
+    margin: 0.5rem 0; 
+}
+
+#answer-list li button {
+    margin-left: 0.4rem; 
+}
+
+/* Style for hiscore panel */
 
 #highscore-panel {
-    color: purple; 
+    flex-direction: row;
+    width: 12%; 
 }
 
+#highscore-panel h1, #highscore-list, .btn-wrapper {
+    width: 100%; 
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: space-between; 
+    margin-top: 0.5rem; 
+}
+
+#highscore-list li {
+    margin: 0.4rem 0;  
+}
+
+#highscore-list li:nth-child(odd) {
+    border: 2px dotted var(--ultraviolet); 
+    transition: border; 
+}
+
+#highscore-list li:nth-child(even) {
+    border: 2px dotted var(--aqua); 
+    transition: border 200ms ease-in; 
+}
+
+#highscore-list li:hover {
+    border: 2px dotted var(--white); 
+}
+/* Style by id tags end*/
+
+
+/* Hide class to hide panels that should not be active for certain quiz-phases */
 .hide {
     display: none; 
 }
